<resources>
    <string name="app_name">Pusat Data DPR RI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pusat_data_dpr_ri">PUSAT DATA DPR RI</string>
    <string name="action_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_publikasi">Publikasi</string>
    <string name="menu_topik">Topik</string>
    <string name="menu_infografis">Infografis</string>
    <string name="menu_visualisasi">Visualisasi</string>
    <string name="menu_dataset">Request Dataset</string>
    <string name="menu">Menu</string>
    <string name="menu_kr">Kesejahteraan Rakyat</string>
    <string name="menu_pk">Politik dan Kemananan</string>
    <string name="menu_ip">Industri dan Pembangunan</string>
    <string name="menu_ek">Ekonomi dan Keuangan</string>
    <string name="sign">Sign</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="single_sign_on_sso_system">SINGLE SIGN ON (SSO) SYSTEM</string>
    <string name="keterangan">Single IdeNTIty Network loGin © Sekretariat Jenderal DPR RI Bidang Data dan Teknologi Informasi (BDTI)2019</string>
    <string name="pengguna">Pengguna</string>
    <string name="password">Password</string>
    <string name="title_profile">Profile</string>
    <string name="selamat_datang_di_pusat_data_dpr_ri">Selamat datang di Pusat Data DPR RI</string>
    <string name="data_mutakhir_dan_terintegrasi_parlemen">Data Mutakhir dan Terintegrasi Parlemen</string>
    <string name="cari_kata_kunci">Cari kata kunci...</string>
    <string name="selamat_datang">Selamat Datang di Pusat Data DPR RI Data Mutakhir dan Terintegrasi Parlemen</string>
    <string name="apakah_anda_memiliki_akun_login_disini">Apakah anda memiliki akun? Login disini</string>
    <string name="tidak_memiliki_akun_atau_akses_menuju_ke_beranda">Tidak memiliki akun atau akses? Menuju ke beranda</string>
    <string name="menuju_ke_beranda">Menuju ke beranda</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="hari">Hari</string>
    <string name="tanggal">Tanggal</string>
    <string name="cari_data_set">Cari dataset...</string>
    <string name="rekapitulasi_peraturan_pelaksanaan_undang_undang_gabungan">Rekapitulasi Peraturan Pelaksanaan Undang-Undang Gabungan</string>
    <string name="pratinjau">Pratinjau</string>
    <string name="pusat_pemantauan_pelaksanaan_undang_undang">PUSAT PEMANTAUAN PELAKSANAAN UNDANG-UNDANG</string>
    <string name="filter">Filter</string>
    <string name="cari_berdasarkan_tag">Cari Berdasarkan Tag</string>
    <string name="jenis_informasi">Jenis Informasi</string>
    <string name="cari_tag">Cari tag</string>
    <string name="naskah_akademik">Naskah Akademik</string>
    <string name="rancangan_undang_undang">Rancangan Undang-Undang</string>
    <string name="proceeding">Proceeding</string>
    <string name="pedoman_kerja">Pedoman Kerja</string>
    <string name="buku">Buku</string>
    <string name="kajian_dan_evaluasi_pemantauan_pelaksanaan_undang_undang">Kajian dan Evaluasi Pemantauan Pelaksanaan Undang-Undang</string>
    <string name="rekapitulasi_peraturan_pelaksanaan_undang_undang">Rekapitulasi Peraturan Pelaksanaan Undang-Undang</string>
    <string name="rekapitulasi_uu_berdasarkan_tahun">Rekapitulasi UU Berdasarkan Tahun</string>
    <string name="rekapitulasi_uu_dan_perlak_pada_komisi_komisi_dan_badan_anggaran_dpr_ri">Rekapitulasi UU dan Perlak Pada Komisi-komisi dan Badan Anggaran DPR RI</string>
    <string name="topik_informasi">Topik Informasi</string>
    <string name="politik_dan_keamanan">Politik dan Keamanan</string>
    <string name="industri_dan_pembangunan">Industri dan Pembangunan</string>
    <string name="jurnal_prodigy">Jurnal Prodigy</string>
    <string name="kesejahteraan_rakyat">Kesejahteraan Rakyat</string>
    <string name="ekonomi_dan_keuangan">Ekonomi dan Keuangan</string>
    <string name="form_request_dataset">FORM REQUEST DATASET</string>
    <string name="identitas">Identitas</string>
    <string name="masukkan_nama_anda">Masukkan nama anda</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="informasi_pekerjaan">Informasi Pekerjaan</string>
    <string-array name="pekerjaan">
        <item>-Pilih Pekerjaan-</item>
        <item>Pelajar/Mahasiswa/Akademisi</item>
        <item>Profesional</item>
        <item>Wirausaha</item>
        <item>Pemerintahan</item>
        <item>Lainnya</item>
    </string-array>
    <string name="informasi_kebutuhan_dataset">Informasi kebutuhan Dataset</string>
    <string name="judul_dataset_yang_dimohon">Judul dataset yang dimohon</string>
    <string name="masukkan_judul">Masukkan judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tujuan_penggunaan_dataset">Tujuan penggunaan dataset</string>
    <string name="masukkan_no_telp">Masukkan no telp</string>
    <string name="kirim">Kirim</string>
    <string name="remember_me">Remember me</string>
    <string name="judul_topik">Konsep Awal RUU (RUU tentang Perubahan atas Undang-Undang Nomor 5 Tahun 1999 tentang Larangan Praktik Monopoli dan Persaingan Usaha Tidak Sehat</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="rancangan_undang_undang_tentang">Rancangan Undang Undang tentang Larangan Praktik Monopoli dan Praktik Persaingan Usaha Tidak Sehat merupakan penyempurnaan terhadap Undang Undang Nomor 5 Tahun 1999. Sebagai penyempurnaan terhadap Undang-Undang sebelumnya, terdapat materi muatan baru, antara lain: perluasan pengertian Pelaku Uaha agar penegakan hukum dapat menjangkau Pelaku Usaha yang berdomisill hukum di luar wilayah Indonesia yang perilakunya mempunyai dampak bagi pasar dan perekonomian Indonesia; perubahan tentang pengaturan pemberitahuan penggabungan atau peleburan badan usaha, saham, menjadi dilakukan pada saat rencana penggabungan atau peleburan badan usaha, pengambilalihan aset, pengembilalihan saham, atau pembentukan usaha patungan tersebut terjadi; pengaturan yang lebih komprehensif mengenai mekanisme dan tata cara penyelesaian erkara persaingan usaha; penegasan kedudukan KPPU sebagai lembaga negara yang berimplikasi pada pelaksanaan fungsi, tugas dan wewenangnya; perubahan denda sanksi administratif yang semula menggunakan nilai nominal menjadi persentase terhadap nilai penjualan dan/atau nilai transaksi.</string>
    <string name="unduh_data">Unduh data</string>
    <string name="unduh_dataset">Unduh Dataset</string>
    <string name="unduh_visualisasi">Unduh Visualisasi</string>
    <string name="dpr_ri_periode_2019_2024">DPR RI periode 2019-2024 telah mengajukan Rancangan Undang-Undang (RUU) tentang Perubahan Atas Undang-Undang Nomor 5 Tahun 2014 tentang Aparatus Sipil Negara. RUU Perubahan Atas ASN telah ditetapkan menjadi prioritas program legislasi nasional.</string>
    <string name="penulis">Penulis</string>
    <string name="elsa_puspitasari">Elsa Puspitasari</string>
    <string-array name="nama_kategori">
        <item>Kesejahteraan Rakyat</item>
        <item>Politik dan Keamanan</item>
        <item>Industri dan Pembangunan</item>
        <item>Ekonomi dan Keuangan</item>
    </string-array>
    <string-array name="tujuan">
        <item>-Pilih Tujuan-</item>
        <item>Referensi Kajian Bisnis</item>
        <item>Referensi Pembuatan Kebijakan</item>
        <item>Referensi Pembuatan Kurikulum/Bahan Ajar</item>
        <item>Referensi Tugas/Karya Ilmiah</item>
        <item>Referensi Pribadi</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="id_news">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="id_statistik">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="nama_statistik">
        <item>Total Publikasi</item>
        <item>Total Organisasi</item>
        <item>Total Topik</item>
        <item>Total Infografis</item>
    </string-array>
    <string-array name="total_statistik">
        <item>5.000</item>
        <item>5</item>
        <item>4</item>
        <item>50</item>
    </string-array>
    <string-array name="id_publikasi">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="nama_publikasi">
        <item>Rekapitulasi Peraturan Pelaksanaan Undang-Undang Gabungan</item>
        <item>Rekapitulasi Peraturan Pelaksanaan UU Komisi II</item>
        <item>Tinjauan Kritis Produksi Padi Nasional</item>
        <item>Optimalisasi Penerapan pajak Pertambahan Nilai (PPN)</item>
        <item>Analisis Dan Evaluasi Pemantauan Pelaksanaan UU Nomor 18 Tahun 2013</item>
        <item>Rekapitulasi Peraturan Pelaksanaan Undang-Undang Gabungan</item>
    </string-array>
    <string-array name="lokasi_publikasi">
        <item>PUSAT PEMANTAUAN PELAKSANAAN UNDANG-UNDANG</item>
        <item>PUSAT PEMANTAUAN PELAKSANAAN UNDANG-UNDANG</item>
        <item>PUSAT KAJIAN ANGGARAN </item>
        <item>PUSAT KAJIAN ANGGARAN</item>
        <item>PUSAT PEMANTAUAN PELAKSANAAN UNDANG-UNDANG</item>
        <item>PUSAT PEMANTAUAN PELAKSANAAN UNDANG-UNDANG</item>
    </string-array>
    <string-array name="tipe_publikasi">
        <item>DATA</item>
        <item>DATA</item>
        <item>TEKS</item>
        <item>DATA</item>
        <item>TEKS</item>
        <item>DATA</item>
    </string-array>
    <string-array name="tahun_publikasi">
        <item>2018</item>
        <item>2016</item>
        <item>2020</item>
        <item>2020</item>
        <item>2012</item>
        <item>2015</item>
    </string-array>
    <string-array name="id_visualiasi">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="txt_visualiasi">
        <item>Perdagangan Internasional</item>
        <item>Analisis Pasar Modal Indonesia</item>
        <item>Evaluasi RPJMN 2015-2019</item>
        <item>Analisis APBN Indonesia</item>
    </string-array>
    <string-array name="name_infografis">
        <item>Hak Ulayat Dalam Reformasi Agraria</item>
        <item>Perspektif Hukum, Sosial, dan Ekonomi </item>
        <item>Analisis Dampak Terhadap Revisi Undang-Undang Nomor 5 Tahun 2014</item>
        <item>Kebijakan Pupuk Bersubsidi</item>
    </string-array>
    <string-array name="item_title_notifikasi">
        <item>Permintaan dataset sudah diterima</item>
        <item>Permintaan data sudah dikirim</item>
    </string-array>
    <string-array name="item_content_notifikasi">
        <item>Selamat siang, Yoga! Permintaan dataset yang anda kirim ...</item>
        <item>Selamat siang, Yoga! Permintaan dataset yang anda kirim ...</item>
    </string-array>
    <string-array name="item_hari_notifikasi">
        <item>Senin</item>
        <item>Selasa</item>
    </string-array>
</resources>