<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DataSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_primary_warna_kulit_4"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:src="@drawable/form" />

            <TextView
                style="@style/TextView.robotoRegulerBlack_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_request_dataset" />
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey" />

        <TextView
            style="@style/TextView.robotoRegulerOrangeTua_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/identitas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"></TextView>

            <EditText
                android:id="@+id/edtNama"
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:hint="@string/masukkan_nama_anda"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telepon"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/bg_edt_search_grey"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/ind"></ImageView>

                    <TextView
                        style="@style/TextView.robotoRegulerBlack_9sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="+62"></TextView>

                </LinearLayout>

                <EditText
                    android:id="@+id/edtNoTelp"
                    style="@style/EditText.dataset"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edt_search_grey"
                    android:hint="@string/masukkan_no_telp"></EditText>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"></TextView>

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:hint="@string/masukkan_email"></EditText>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGrey" />

        <TextView
            style="@style/TextView.robotoRegulerOrangeTua_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/informasi_pekerjaan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pekerjaan"></TextView>

            <Spinner
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:entries="@array/pekerjaan"
                android:hint="@string/masukkan_email"></Spinner>

        </LinearLayout>

        <TextView
            style="@style/TextView.robotoRegulerOrangeTua_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/informasi_kebutuhan_dataset" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_dataset_yang_dimohon"></TextView>

            <EditText
                android:id="@+id/edtJudul"
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:hint="@string/masukkan_judul"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"></TextView>

            <EditText
                android:id="@+id/edtDeskripsi"
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:gravity="left"
                android:hint="Masukkan Deskripsi"
                android:inputType="text"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tujuan_penggunaan_dataset"></TextView>

            <Spinner
                style="@style/EditText.dataset"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_search_grey"
                android:entries="@array/tujuan"
                android:hint="@string/masukkan_email"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button.primary_circle_white_12sp"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_btn_primary_sequare"
                android:padding="5dp"
                android:text="@string/kirim"
                android:id="@+id/btnKirim"></androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>